--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:600"
     rel="stylesheet">
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/index.css"> -->
-    <title>React App</title>
+    <title>Broce Parts</title>
   </head>
   <body>
     <div id="root"></div>
