Add fonts and minor bug fix for orderSubList sorting in admin view

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link
+    <link rel="stylesheet" href="//cdn.materialdesignicons.com/1.8.36/css/materialdesignicons.min.css">
+    <!-- <link
       href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600"
       rel="stylesheet"
-    >
+    > -->
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/index.css"> -->
     <title>Broce Parts</title>
   </head>
